Remove kAllowed and kFallbackAllowed from cronet data reduction proxy

kAllowed and kFallbackAllowed was removed in this CL.
https://codereview.chromium.org/2626963003/

BUG=681872
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2635093003
Cr-Commit-Position: refs/heads/master@{#444510}

Former-commit-id: 3248e3bf783e1a2ff4f7557207ba69696c235dc3