components/cronet/android/cronet_data_reduction_proxy.cc
@@ -89,10 +89,8 @@ CronetDataReductionProxy::CronetDataReductionProxy(
   settings_.reset(
       new data_reduction_proxy::DataReductionProxySettings());
   io_data_.reset(new data_reduction_proxy::DataReductionProxyIOData(
-      data_reduction_proxy::Client::CRONET_ANDROID,
-      data_reduction_proxy::DataReductionProxyParams::kAllowed |
-          data_reduction_proxy::DataReductionProxyParams::kFallbackAllowed,
-      net_log, task_runner, task_runner, false, user_agent, std::string()));
+      data_reduction_proxy::Client::CRONET_ANDROID, 0, net_log, task_runner,
+      task_runner, false, user_agent, std::string()));
   io_data_->request_options()->SetKeyOnIO(key);
 }
 
